test/manual/04-traffic-split-1000-500.yaml
apiVersion: split.smi-spec.io/v1alpha1
kind: TrafficSplit
metadata:
  name: reviews-rollout
spec:
  service: reviews
  backends:
  - service: reviews-v1
    weight: 1
  - service: reviews-v2
    weight: 500m
