test/manual/05-traffic-split-0-1000-output.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews-rollout
spec:
  hosts:
  - reviews
  http:
  - route:
    - destination:
        host: reviews-v1
      weight: 0
    - destination:
        host: reviews-v2
      weight: 100
