test/manual/05-traffic-split-0-1000.yaml
apiVersion: split.smi-spec.io/v1alpha1
kind: TrafficSplit
metadata:
  name: reviews-rollout
spec:
  service: reviews
  backends:
  - service: reviews-v1
    weight: 0
  - service: reviews-v2
    weight: 1
